--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <center>
 
     <h1>Welcome to to-do list Application</h1>
+    <p> Hi I am Shashank Parab from Information system department.</p>
 
         </center>
 	    </body>
