--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <p><a href="http://www.njit.edu" target="_blank">Fall 2017</a></p>
 
+
+    <marquee behavior="scroll" direction="left">Website under construction.... </marquee>
+
         </center>
 	    </body>
 	        </html>
