Adding h1,p,href,marquee and Italic tag

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <marquee behavior="scroll" direction="left">Website under construction.... </marquee>
 
+    <i>Thank you</i>
+
         </center>
 	    </body>
 	        </html>
